# datafusion-loki

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
datafusion-loki/: Cargo.toml
datafusion-loki/examples/: datafusion.rs
datafusion-loki/src/: codec.rs  expr.rs  function.rs  insert.rs  lib.rs  protobuf.rs  scan.rs  table.rs  utils.rs
examples/: arrow_map.rs  datafusion.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  utils.rs
integration-tests/testdata/: docker-compose.yaml  init.sql  loki-config.yaml
integration-tests/tests/: function.rs  table.rs
src/: expr.rs  lib.rs  scan.rs  table.rs
