[workspace]
members = ["datafusion-loki", "datafusion-loki/gen", "integration-tests"]
resolver = "3"

[workspace.dependencies]
datafusion = "51"
datafusion-catalog = "51"
datafusion-common = "51"
datafusion-datasource = "51"
datafusion-execution = "51"
datafusion-expr = "51"
datafusion-functions = "51"
datafusion-physical-expr = "51"
datafusion-physical-plan = "51"
datafusion-proto = "51"

arrow = "57"
parquet = "57"

prost = "0.13"
prost-build = "0.13"
tokio = "1"