[workspace]
members = ["datafusion-loki", "datafusion-loki/gen", "integration-tests"]
resolver = "3"

[workspace.dependencies]
datafusion = "52"
datafusion-catalog = "52"
datafusion-common = "52"
datafusion-datasource = "52"
datafusion-execution = "52"
datafusion-expr = "52"
datafusion-functions = "52"
datafusion-physical-expr = "52"
datafusion-physical-plan = "52"
datafusion-proto = "52"

arrow = "57"
parquet = "57"

prost = "0.13"
prost-build = "0.13"
tokio = "1"