[workspace]
members = ["datafusion-loki", "datafusion-loki/gen", "integration-tests"]
resolver = "3"

[workspace.dependencies]
datafusion = "53"
datafusion-catalog = "53"
datafusion-common = "53"
datafusion-datasource = "53"
datafusion-execution = "53"
datafusion-expr = "53"
datafusion-functions = "53"
datafusion-physical-expr = "53"
datafusion-physical-plan = "53"
datafusion-proto = "53"

arrow = "58"
parquet = "58"

prost = "0.13"
prost-build = "0.13"
tokio = "1"
