[package]
name = "datafusion-loki"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
futures = "0.3"
parquet = { version = "55", features = ["async"] }
prost = { workspace = true }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = "1"
# TODO remove this
tokio = { workspace = true, features = ["full"] }