[package]
name = "datafusion-loki"
version = "0.3.0"
edition = "2024"
authors = ["lewiszlw <lewiszlw520@gmail.com>"]
description = "A DataFusion table provider for querying Loki data"
keywords = ["SQL", "database", "loki", "log"]
license = "MIT"
repository = "https://github.com/systemxlabs/datafusion-loki"
readme = "../README.md"

[dependencies]
async-trait = "0.1"
datafusion-catalog = { workspace = true }
datafusion-common = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-proto = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true, features = ["async"] }

futures = "0.3"
log = "0.4"
prost = { workspace = true }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = "1"

[dev-dependencies]
datafusion = { workspace = true }
tokio = { workspace = true, features = ["full"] }